Updated container build setup to make custom git logic available instantly

--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -283,7 +283,7 @@ then you will be able to compile with
 \end{lstlisting}
 Compiles \texttt{README.pdf} to \texttt{VOID\_Docs}.
 \subsection{Optimized \texttt{Git} Commands}
-I added my personal \texttt{git} commands for quality of life stuff. 
+I added my personal \texttt{git} commands for quality of life stuff. Updated \texttt{devcontainer.json} so they are available instantly when the workspace is built.
 \texttt{gitster}:
 \begin{verbatim}
 read -p "Commit message: " msg
