--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -285,6 +285,7 @@ Compiles \texttt{README.pdf} to \texttt{VOID\_Docs}.
 \subsection{Optimized \texttt{Git} Commands}
 I added my personal \texttt{git} commands for quality of life stuff. Updated \texttt{devcontainer.json} so they are available instantly when the workspace is built.
 
+\newline
 \texttt{gitster}:
 \begin{verbatim}
 ------------------------------
