--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -297,6 +297,8 @@ git push origin master
 ------------------------------
 \end{verbatim}
 
+\vspace{1em}
+
 \texttt{gitmain}:
 \begin{verbatim}
 ------------------------------
@@ -306,6 +308,8 @@ git commit -m "$msg"
 git push origin main
 ------------------------------
 \end{verbatim}
+
+\vspace{1em}
 
 \texttt{gitbranch}:
 \begin{verbatim}
