updated readme.pdf && tested fresh codespace build - ALL WORKED OUT

--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -244,10 +244,11 @@
   \keywords{Foolproof}
 \end{abstract}
 
-\section{Key Features Added}
+\section{Version \texttt{v.0.1.0.0} Update List}
+\subsection{Key Features Added}
 Brief list of all the added functionality
 
-\subsection{\texttt{init.sh}}
+\subsubsection{\texttt{init.sh}}
 This script is for setting up the project once the Codespace is started. Edit the configuration file \texttt{config.txt} to specify the project:
 \begin{verbatim}
 PROJECT_NAME = MyPlugin
@@ -260,19 +261,19 @@ Then, activate the init script with:
 ./init.sh
 \end{lstlisting}
 
-\subsection{\texttt{setup.sh}} 
+\subsubsection{\texttt{setup.sh}} 
 Rebuilt the \texttt{setup.sh} script that used to exist in the repo. It now gets called from \texttt{init.sh} and is fed arguments from \texttt{config.txt}.
 
-\subsection{\protect\texttt{undo\_setup.sh}}
+\subsubsection{\protect\texttt{undo\_setup.sh}}
 Makes the process a little more foolproof. You can now undo the \texttt{init.sh} script and reset the project folders/files to \texttt{TemplateProject}. Reads correct \texttt{PROJECT\_NAME} from \texttt{config.txt}. The folders \texttt{.github/workflows} and \texttt{.vscode} are \texttt{git} restored so make sure you have the initial state you want to revert to as your previous push or else you will have to manually delete and copy back in the template files. If you have your tracking set up, then simply reset the project with:
 \begin{lstlisting}
 ./undo_setup.sh
 \end{lstlisting}
-\subsection{Updated \texttt{duplicate.py}}
+\subsubsection{Updated \texttt{duplicate.py}}
 The \texttt{duplicate.py} script was changing my custom scripts so I updated it to no longer touch them.
-\subsection{Added LaTeX functionality and Docs to the Codespace}
+\subsubsection{Added LaTeX functionality and Docs to the Codespace}
 Obviously, in order for people to take you seriously, you need to communicate your ideas on either a chalkboard or LaTeX. Therefore, I have added a LaTeX install to the \texttt{setup\_container.sh} so the documentation of changes made for VOID Audio can be documented properly. 
-\subsubsection{LaTeX Functionality}
+\paragraph{LaTeX Functionality}
 Now includes scripts to setup LaTeX to compile the README.tex file. Edits can be made at \texttt{VOID\_Docs/svjour/README.tex}. When you are ready to compile them, first use:
 \begin{lstlisting}
 ./VOID_Docs/setup_latex.sh
@@ -282,7 +283,7 @@ then you will be able to compile with
 ./VOID_Docs/tex.sh
 \end{lstlisting}
 Compiles \texttt{README.pdf} to \texttt{VOID\_Docs}.
-\subsection{Optimized \texttt{Git} Commands}
+\subsubsection{Optimized \texttt{Git} Commands}
 I added my personal \texttt{git} commands for quality of life stuff. Updated \texttt{devcontainer.json} so they are available instantly when the workspace is built.
 
 \vspace{1em}
@@ -321,7 +322,7 @@ git commit -m "$msg"
 git push origin "$branch"
 ------------------------------
 \end{verbatim}
-\section{Expected Next Steps}
+\subsection{Expected Next Steps}
 As it stands, learning how to use this framework as effeciently as possible will involve improvements to this init build script. Ideally, we will have a set of specifications available in \texttt{config.txt} that can get started on specific build types that require unique, for example:
 \begin{verbatim}
 REQUIRES_REALTIME_DISPLAY = bool
