--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -275,6 +275,8 @@ The \texttt{duplicate.py} script was changing my custom scripts so I updated it 
 Obviously, in order for people to take you seriously, you need to communicate your ideas on either a chalkboard or LaTeX. Therefore, I have added a LaTeX install to the \texttt{setup\_container.sh} so the documentation of changes made for VOID Audio can be documented properly. 
 \paragraph{LaTeX Functionality}
 
+\vspace{1em}
+
 Now includes scripts to setup LaTeX to compile the README.tex file. Edits can be made at \texttt{VOID\_Docs/svjour/README.tex}. When you are ready to compile them, first use:
 \begin{lstlisting}
 ./VOID_Docs/setup_latex.sh
