--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -322,7 +322,7 @@ git push origin "$branch"
 ------------------------------
 \end{verbatim}
 \subsection{Expected Next Steps}
-As it stands, learning how to use this framework as effeciently as possible will involve improvements to this init build script. Ideally, we will have a set of specifications available in \texttt{config.txt} that can get started on specific build types that require unique, for example:
+As it stands, learning how to use this framework as effeciently as possible will involve improvements to this init build script. Ideally, we will have a set of specifications available in \texttt{config.txt} that can get started on specific build types that require unique logic, for example:
 \begin{verbatim}
 REQUIRES_REALTIME_DISPLAY = bool
 IS_INSTRUMENT = bool
