--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -338,7 +338,7 @@ etc...
 
 \phantom{.}
 
-Nothing at the moment.
+% Nothing at the moment.
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% README %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
