updated VOID_Docs/README.pdf formatting

--- a/VOID_Docs/svjour/README.tex
+++ b/VOID_Docs/svjour/README.tex
@@ -255,7 +255,9 @@ The task configuration files follow the same outline of \texttt{PATH>QUERY>ASSOC
 \begin{verbatim}
 PATH = "TemplateProject/TemplateProject.h"
 QUERY = """
-Given this header file, update it so that it also includes a controllable parameter for mixAmount and width
+Given this header file, update it so 
+that it also includes a controllable 
+parameter for mixAmount and width
 """
 ASSOCIATED = ""
 \end{verbatim}
@@ -264,7 +266,9 @@ Or with ASSOCIATED:
 \begin{verbatim}
 PATH = "TemplateProject/TemplateProject.cpp"
 QUERY = """
-Given this cpp file, update it so that it also includes the controllable parameter for mixAmount and width specified in 
+Given this cpp file, update it so 
+that it also includes the 
+controllable parameter for mixAmount and width specified in 
 """
 ASSOCIATED = "TemplateProject/TemplateProject.h"
 \end{verbatim}
